07_TAD_opaco/TAD_opac_00/Resultados/Maria/main/result_compilation.txt
Resultados/Maria/main/circulo.c: In function ‘Circulo_Apaga’:
Resultados/Maria/main/circulo.c:23:12: error: expected ‘;’ before ‘}’ token
   23 |     free(c)
      |            ^
      |            ;
   24 | }
      | ~           
Resultados/Maria/main/main.c: In function ‘main’:
Resultados/Maria/main/main.c:8:35: warning: passing argument 1 of ‘Circulo_Acessa_Raio’ from incompatible pointer type [-Wincompatible-pointer-types]
    8 |     float r = Circulo_Acessa_Raio(c);
      |                                   ^
      |                                   |
      |                                   struct circulo **
In file included from Resultados/Maria/main/main.c:3:
Resultados/Maria/main/circulo.h:55:37: note: expected ‘tCirculo’ {aka ‘struct circulo *’} but argument is of type ‘struct circulo **’
   55 | float Circulo_Acessa_Raio (tCirculo c);
      |                            ~~~~~~~~~^
Resultados/Maria/main/main.c:15:12: warning: assignment to ‘struct ponto **’ from incompatible pointer type ‘tPonto’ {aka ‘struct ponto *’} [-Wincompatible-pointer-types]
   15 |     centro = Pto_Cria(x1, y1);
      |            ^
Resultados/Maria/main/main.c:16:28: warning: passing argument 1 of ‘Circulo_Atribui_Centro’ from incompatible pointer type [-Wincompatible-pointer-types]
   16 |     Circulo_Atribui_Centro(c, centro);
      |                            ^
      |                            |
      |                            struct circulo **
In file included from Resultados/Maria/main/main.c:3:
Resultados/Maria/main/circulo.h:62:39: note: expected ‘tCirculo’ {aka ‘struct circulo *’} but argument is of type ‘struct circulo **’
   62 | void Circulo_Atribui_Centro (tCirculo c, tPonto p);
      |                              ~~~~~~~~~^
Resultados/Maria/main/main.c:16:31: warning: passing argument 2 of ‘Circulo_Atribui_Centro’ from incompatible pointer type [-Wincompatible-pointer-types]
   16 |     Circulo_Atribui_Centro(c, centro);
      |                               ^~~~~~
      |                               |
      |                               struct ponto **
In file included from Resultados/Maria/main/main.c:3:
Resultados/Maria/main/circulo.h:62:49: note: expected ‘tPonto’ {aka ‘struct ponto *’} but argument is of type ‘struct ponto **’
   62 | void Circulo_Atribui_Centro (tCirculo c, tPonto p);
      |                                          ~~~~~~~^
Resultados/Maria/main/main.c:17:26: warning: passing argument 1 of ‘Circulo_Atribui_Raio’ from incompatible pointer type [-Wincompatible-pointer-types]
   17 |     Circulo_Atribui_Raio(c, r);
      |                          ^
      |                          |
      |                          struct circulo **
In file included from Resultados/Maria/main/main.c:3:
Resultados/Maria/main/circulo.h:69:37: note: expected ‘tCirculo’ {aka ‘struct circulo *’} but argument is of type ‘struct circulo **’
   69 | void Circulo_Atribui_Raio (tCirculo c, float r);
      |                            ~~~~~~~~~^
Resultados/Maria/main/main.c:19:11: warning: assignment to ‘struct ponto **’ from incompatible pointer type ‘tPonto’ {aka ‘struct ponto *’} [-Wincompatible-pointer-types]
   19 |     ponto = Pto_Cria(x2, y2);
      |           ^
Resultados/Maria/main/main.c:21:37: warning: passing argument 1 of ‘Circulo_Interior’ from incompatible pointer type [-Wincompatible-pointer-types]
   21 |     printf("%d\n", Circulo_Interior(c, ponto));
      |                                     ^
      |                                     |
      |                                     struct circulo **
In file included from Resultados/Maria/main/main.c:3:
Resultados/Maria/main/circulo.h:77:32: note: expected ‘tCirculo’ {aka ‘struct circulo *’} but argument is of type ‘struct circulo **’
   77 | int Circulo_Interior (tCirculo c, tPonto p);
      |                       ~~~~~~~~~^
Resultados/Maria/main/main.c:21:40: warning: passing argument 2 of ‘Circulo_Interior’ from incompatible pointer type [-Wincompatible-pointer-types]
   21 |     printf("%d\n", Circulo_Interior(c, ponto));
      |                                        ^~~~~
      |                                        |
      |                                        struct ponto **
In file included from Resultados/Maria/main/main.c:3:
Resultados/Maria/main/circulo.h:77:42: note: expected ‘tPonto’ {aka ‘struct ponto *’} but argument is of type ‘struct ponto **’
   77 | int Circulo_Interior (tCirculo c, tPonto p);
      |                                   ~~~~~~~^
Resultados/Maria/main/main.c:23:15: warning: passing argument 1 of ‘Pto_Apaga’ from incompatible pointer type [-Wincompatible-pointer-types]
   23 |     Pto_Apaga(centro);
      |               ^~~~~~
      |               |
      |               struct ponto **
In file included from Resultados/Maria/main/circulo.h:15,
                 from Resultados/Maria/main/main.c:3:
Resultados/Maria/main/ponto.h:37:24: note: expected ‘tPonto’ {aka ‘struct ponto *’} but argument is of type ‘struct ponto **’
   37 | void Pto_Apaga (tPonto p);
      |                 ~~~~~~~^
Resultados/Maria/main/main.c:24:15: warning: passing argument 1 of ‘Pto_Apaga’ from incompatible pointer type [-Wincompatible-pointer-types]
   24 |     Pto_Apaga(ponto);
      |               ^~~~~
      |               |
      |               struct ponto **
In file included from Resultados/Maria/main/circulo.h:15,
                 from Resultados/Maria/main/main.c:3:
Resultados/Maria/main/ponto.h:37:24: note: expected ‘tPonto’ {aka ‘struct ponto *’} but argument is of type ‘struct ponto **’
   37 | void Pto_Apaga (tPonto p);
      |                 ~~~~~~~^
Resultados/Maria/main/main.c:25:19: warning: passing argument 1 of ‘Circulo_Apaga’ from incompatible pointer type [-Wincompatible-pointer-types]
   25 |     Circulo_Apaga(c);
      |                   ^
      |                   |
      |                   struct circulo **
In file included from Resultados/Maria/main/main.c:3:
Resultados/Maria/main/circulo.h:41:30: note: expected ‘tCirculo’ {aka ‘struct circulo *’} but argument is of type ‘struct circulo **’
   41 | void Circulo_Apaga (tCirculo c);
      |                     ~~~~~~~~~^
